#
# Copyright @ 2019 Audi AG. All rights reserved.
# 
#     This Source Code Form is subject to the terms of the Mozilla
#     Public License, v. 2.0. If a copy of the MPL was not distributed
#     with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# If it is not possible or desirable to put the notice in a particular file, then
# You may include the notice in a location (such as a LICENSE file in a
# relevant directory) where a recipient would be likely to look for such a notice.
# 
# You may add additional accurate notices of copyright ownership.
#
add_subdirectory(demo_empty_element)
add_subdirectory(demo_remote_properties)
add_subdirectory(demo_incident)
add_subdirectory(demo_error_recovery)
add_subdirectory(demo_diagnostics)
add_subdirectory(demo_signal_mapping)
add_subdirectory(demo_realtime_cascade_30)
add_subdirectory(demo_timing)
add_subdirectory(demo_timing_30)
add_subdirectory(demo_timing_master_external_clock)
add_subdirectory(demo_service)
add_subdirectory(demo_dynamic_data)
